--- a/cpp/.vscode/tasks.json
+++ b/cpp/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++ build active file",
-            "command": "/usr/bin/g++",
+            "label": "C/C++: g++-9 build active file",
+            "command": "/usr/bin/g++-9",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
