--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(CodeCollection VERSION 0.1.0)
 
-add_subdirectory(eigen_usage)
+# add_subdirectory(eigen_usage)
 
-add_subdirectory(inheritance)
+# add_subdirectory(inheritance)
+
+add_subdirectory(move_semantics)
