--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,4 +5,6 @@ project(CodeCollection VERSION 0.1.0)
 
 # add_subdirectory(inheritance)
 
-add_subdirectory(move_semantics)
+# add_subdirectory(move_semantics)
+
+add_subdirectory(templates)
