--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -9,4 +9,6 @@ project(CodeCollection VERSION 0.1.0)
 
 # add_subdirectory(templates)
 
-add_subdirectory(cpp-forward)
+# add_subdirectory(cpp-forward)
+
+add_subdirectory(type_conversions)
