added example for smart pointers

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -11,4 +11,6 @@ project(CodeCollection VERSION 0.1.0)
 
 # add_subdirectory(cpp-forward)
 
-add_subdirectory(type_conversions)
+# add_subdirectory(type_conversions)
+
+add_subdirectory(smart_pointers)
