moved cpp_learnings code to inner folder

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -3,14 +3,4 @@ project(CodeCollection VERSION 0.1.0)
 
 # add_subdirectory(eigen_usage)
 
-# add_subdirectory(inheritance)
-
-# add_subdirectory(move_semantics)
-
-# add_subdirectory(templates)
-
-# add_subdirectory(cpp-forward)
-
-# add_subdirectory(type_conversions)
-
-add_subdirectory(smart_pointers)
+add_subdirectory(cpp_learnings)
