changed repo config

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -3,4 +3,6 @@ project(CodeCollection VERSION 0.1.0)
 
 # add_subdirectory(eigen_usage)
 
-add_subdirectory(cpp_learnings)
+# add_subdirectory(cpp_learnings)
+
+add_subdirectory(pointcloud_process)
