--- a/cpp/pointcloud_process/CMakeLists.txt
+++ b/cpp/pointcloud_process/CMakeLists.txt
@@ -19,7 +19,11 @@ set(SRC_FILES "utils/pcl_visualization_utils.cpp")
 add_executable(pointcloud_basic basic.cpp ${SRC_FILES})
 target_link_libraries(pointcloud_basic ${PCL_LIBRARIES})
 
+add_executable(pointcloud_colorization pointcloud_colorization.cpp ${SRC_FILES})
+target_link_libraries(pointcloud_colorization ${PCL_LIBRARIES})
+
 ############## Filtering ################
+
 add_executable(box_filtering filtering/box_filtering.cpp ${SRC_FILES})
 target_link_libraries(box_filtering ${PCL_LIBRARIES})
 
@@ -31,3 +35,21 @@ target_link_libraries(downsample_filtering ${PCL_LIBRARIES})
 
 add_executable(downsample_filtering_pcl filtering/downsample_filtering_pcl.cpp ${SRC_FILES})
 target_link_libraries(downsample_filtering_pcl ${PCL_LIBRARIES})
+
+############## Noise Removal ################
+add_executable(radius_outlier_removal noise_removal/radius_outlier_removal.cpp ${SRC_FILES})
+target_link_libraries(radius_outlier_removal ${PCL_LIBRARIES})
+
+add_executable(statistical_outlier_removal noise_removal/statistical_outlier_removal.cpp ${SRC_FILES})
+target_link_libraries(statistical_outlier_removal ${PCL_LIBRARIES})
+
+############## Noise Removal ################
+add_executable(line_radius_outlier_removal noise_removal/line_radius_outlier_removal.cpp ${SRC_FILES})
+target_link_libraries(line_radius_outlier_removal ${PCL_LIBRARIES})
+
+add_executable(line_statistical_outlier_removal noise_removal/line_statistical_outlier_removal.cpp ${SRC_FILES})
+target_link_libraries(line_statistical_outlier_removal ${PCL_LIBRARIES})
+
+############## Unstable Points Removal ################
+add_executable(unstable_points_removal noise_removal/unstable_points_removal.cpp ${SRC_FILES})
+target_link_libraries(unstable_points_removal ${PCL_LIBRARIES})
