added code for pca

--- a/cpp/pointcloud_process/CMakeLists.txt
+++ b/cpp/pointcloud_process/CMakeLists.txt
@@ -15,6 +15,10 @@ link_directories(${PCL_LIBRARY_DIRS})
 include_directories(utils)
 set(SRC_FILES "utils/pcl_visualization_utils.cpp")
 
+include_directories(fitering)
+include_directories(noise_removal)
+include_directories(model_fitting)
+
 
 add_executable(pointcloud_basic basic.cpp ${SRC_FILES})
 target_link_libraries(pointcloud_basic ${PCL_LIBRARIES})
@@ -37,6 +41,7 @@ add_executable(downsample_filtering_pcl filtering/downsample_filtering_pcl.cpp $
 target_link_libraries(downsample_filtering_pcl ${PCL_LIBRARIES})
 
 ############## Noise Removal ################
+
 add_executable(radius_outlier_removal noise_removal/radius_outlier_removal.cpp ${SRC_FILES})
 target_link_libraries(radius_outlier_removal ${PCL_LIBRARIES})
 
@@ -44,6 +49,7 @@ add_executable(statistical_outlier_removal noise_removal/statistical_outlier_rem
 target_link_libraries(statistical_outlier_removal ${PCL_LIBRARIES})
 
 ############## Noise Removal ################
+
 add_executable(line_radius_outlier_removal noise_removal/line_radius_outlier_removal.cpp ${SRC_FILES})
 target_link_libraries(line_radius_outlier_removal ${PCL_LIBRARIES})
 
@@ -51,5 +57,11 @@ add_executable(line_statistical_outlier_removal noise_removal/line_statistical_o
 target_link_libraries(line_statistical_outlier_removal ${PCL_LIBRARIES})
 
 ############## Unstable Points Removal ################
+
 add_executable(unstable_points_removal noise_removal/unstable_points_removal.cpp ${SRC_FILES})
 target_link_libraries(unstable_points_removal ${PCL_LIBRARIES})
+
+############## Model Fitting ################
+
+add_executable(pointcloud_pca model_fitting/pointcloud_pca.cpp ${SRC_FILES})
+target_link_libraries(pointcloud_pca ${PCL_LIBRARIES})
