--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs":true,
     "editor.formatOnSave": true,
     "files.associations": {
         "cctype": "cpp",
