added code for ransac

--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -69,6 +69,7 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "unordered_set": "cpp"
     }
 }
