--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -70,6 +70,11 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "dense": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "core": "cpp",
+        "cholmodsupport": "cpp"
     }
 }
